--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.17",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "dom": "^0.0.3",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.10.1",
     "react-slick": "^0.31.0",
+    "router": "^2.2.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.17"
   },
