--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.17",
+    "date-fns": "^4.1.0",
     "dom": "^0.0.3",
     "react": "^19.2.3",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.10.1",
     "react-slick": "^0.31.0",
