--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,7 @@ DB_USER=root
 DB_PASSWORD=123456
 DB_NAME=hotel_booking
 PORT=5000
+JWT_SECRET=super_secret_key_123
+JWT_EXPIRES_IN=1d
+
 \connect root@localhost
