--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=123456
+DB_PASSWORD=
 DB_NAME=hotel_booking
 PORT=5000
 JWT_SECRET=super_secret_key_123
