cloud setup done

--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,8 @@ JWT_EXPIRES_IN=1d
 
 \connect root@localhost
 \connect mysql://root@localhost:3306
+
+
+CLOUDINARY_CLOUD_NAME=db4vqeorc
+CLOUDINARY_API_KEY=174118524974866
+CLOUDINARY_API_SECRET=o1d4ifWzdo_duxcTIJqG0ka5TAc
